--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install -r requirements.txt
     - name: Fetch repo_data.json
       run: |
         curl https://raw.githubusercontent.com/mnot/ietf-repo-data/master/repo_data.json > repo_data.json
