--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Summarise Issues
 on:
   schedule:
     - cron: '30 6 * * 0'
-      
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,14 +14,11 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: 3.9
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Fetch repo_data.json
-      run: |
-        curl https://raw.githubusercontent.com/ietf-github-services/repo-data/master/repo_data.json > repo_data.json
     - name: Summarise Issues
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -30,4 +27,4 @@ jobs:
         SMTP_USERNAME: mnot@mnot.net
         SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
       run: |
-        python3 open_issues.py -e repo_data.json
+        python3 open_issues.py -e subscribers.json
